Fix copy (element can't be invisible)

--- a/_sass/_pmlr.scss
+++ b/_sass/_pmlr.scss
@@ -97,7 +97,7 @@ font-size:75%;
 .codebox {
     width: 1px;
     height: 1px;
-    border: 0;
+    border: none;
 }
 
 .bibbutton {
